--- a/notebooks/python_in_60_minuti.ipynb
+++ b/notebooks/python_in_60_minuti.ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 20,
       "metadata": {
         "id": "5OjP4fUmqSS5"
       },
@@ -108,7 +108,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Felice di conoscerti FUlvio\n"
+            "Felice di conoscerti Jéré\n"
           ]
         }
       ],
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "CQa72zX5qro2"
       },
@@ -174,8 +174,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "6\n",
-            "Fulvio\n"
+            "6\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jéré\n"
           ]
         }
       ],
@@ -199,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "DIN4foM8qsUH"
       },
@@ -208,7 +214,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gatto è il tuo nuovo padrone\n"
+            "Luis è il tuo nuovo padrone\n"
           ]
         }
       ],
@@ -231,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -247,7 +253,7 @@
               "str"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -273,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -289,23 +295,23 @@
               "bool"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Intero\n",
-        "var = 5\n",
+        "var:int = 5\n",
         "\n",
         "# Float\n",
-        "var = 4.15\n",
+        "var: float = 4.15\n",
         "\n",
         "# Stringa\n",
-        "var = \"ciao ciao\"\n",
+        "var:str = \"ciao ciao\"\n",
         "\n",
         "# Boolean\n",
-        "var = True\n",
+        "var:bool = True\n",
         "\n",
         "type(var)"
       ]
@@ -342,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "89C2GrzUskOQ"
       },
@@ -379,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {
         "id": "cnVUW1zFsqlO"
       },
@@ -416,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 22,
       "metadata": {
         "id": "0DrkUuP3svty"
       },
@@ -425,6 +431,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "11\n",
             "10\n",
             "<class 'int'>\n"
           ]
@@ -433,6 +440,7 @@
       "source": [
         "# Creiamo una variabile che contiene una stringa\n",
         "var = \"10\"\n",
+        "print(int(var)+1)\n",
         "\n",
         "# Convertiamo la variabile da stringa a intero\n",
         "var = int(var)\n",
@@ -454,20 +462,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
       "metadata": {
         "id": "oB0a9UyUt9aE"
       },
       "outputs": [
         {
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: ''",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m cat_lives \u001b[39m=\u001b[39m \u001b[39m7\u001b[39m\n\u001b[1;32m      3\u001b[0m cat \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mSilvestro\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m my_cat_lives \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mQuante vite ha perso ? \u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m      5\u001b[0m my_cat_lives \u001b[39m=\u001b[39m cat_lives\u001b[39m-\u001b[39mmy_cat_lives\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mIl tuo gatto \u001b[39m\u001b[39m{name}\u001b[39;00m\u001b[39m ha ancora \u001b[39m\u001b[39m{lives}\u001b[39;00m\u001b[39m vite\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(name\u001b[39m=\u001b[39mcat, lives\u001b[39m=\u001b[39mmy_cat_lives))\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Il tuo gatto Silvestro ha ancora 4 vite\n"
           ]
         }
       ],
@@ -478,7 +482,7 @@
         "my_cat_lives = int(input(\"Quante vite ha perso ? \"))\n",
         "my_cat_lives = cat_lives-my_cat_lives\n",
         "\n",
-        "print(\"Il tuo gatto {name} ha ancora {lives} vite\".format(name=cat, lives=my_cat_lives))"
+        "print(f\"Il tuo gatto {cat} ha ancora {my_cat_lives} vite\")"
       ]
     },
     {
@@ -493,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "7hu1J6sZuM-F"
       },
@@ -502,7 +506,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Il tuo gatto Silvestro ha ancora 5 vite\n"
+            "Il tuo gatto Louis ha ancora 4 vite\n"
           ]
         }
       ],
@@ -539,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -556,6 +560,8 @@
             "3\n",
             "6\n",
             "2.0\n",
+            "2.5\n",
+            "2\n",
             "1\n",
             "52\n"
           ]
@@ -573,6 +579,8 @@
         "\n",
         "# divisione\n",
         "print(4/2)\n",
+        "print(5/2)\n",
+        "print(5//2) #divisione con risultato in interi\n",
         "\n",
         "# resto\n",
         "print(5%2)\n",
@@ -599,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -626,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -639,7 +647,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "f è il tuo nuovo padrone\n"
+            " è il tuo nuovo padrone\n"
           ]
         }
       ],
@@ -650,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "metadata": {
         "id": "D7k4OK86oS0Y",
         "outputId": "cbfcf319-8a70-469f-b157-6ca1730a017b"
@@ -682,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -699,7 +707,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[17], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m cat_lives \u001b[39m=\u001b[39m \u001b[39m7\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39;49m\u001b[39mI gatti hanno \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m+\u001b[39;49mcat_lives\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m vite\u001b[39m\u001b[39m\"\u001b[39m)\n",
+            "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m cat_lives \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m7\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mI gatti hanno \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mcat_lives\u001b[49m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m vite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
             "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
           ]
         }
@@ -3537,7 +3545,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.10.13"
     },
     "vscode": {
       "interpreter": {
